# CloudTracking

./: .gitignore  LICENSE  analyse_clouds.py  cloud_results.nc  file_sizer.py  lba_config.mcf  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
analysis/: analysis.ipynb  base_detachment_cloud_visual.py  base_lowering_cloud_visual.py  budget_closure.ipynb  budget_closure2.ipynb  budget_closure_buoyancy_investigation.ipynb  budget_closure_correction.ipynb  budget_closure_near_environment.ipynb  budget_closure_testing_area.ipynb  budget_closure_w_and_B_distributions.ipynb  cloud_3d_visualizer.py  cloud_lifecycle_visualisation.py  helper_functions.py  input_field_statistics.ipynb  non_LCL_cloud_visual.py  oscillation_analysis.ipynb  output_analysis.ipynb  output_analysis_aloft_environment.ipynb  output_analysis_basics.ipynb  output_analysis_classification.ipynb  output_analysis_cloudbase.ipynb  output_analysis_environment.ipynb  output_analysis_general.ipynb  output_analysis_mass_flux.ipynb  output_analysis_mergessplits.ipynb  output_analysis_vertical_profiles.ipynb  plot_nip_vs_lifetime.py  track_statistics.py
analysis/LBA/: lba_cloud_3d_visualizer.py  lba_tracking_validation.ipynb
analysis/lifetime_massflux/: classes.py  cz_estimator.py  density.py  example_usage.py  features.py  metrics.py  plot_lifetime_massflux.py  predict.py  run_lifetime_massflux.py  test_identity.py
configs/: lba.example.toml  rico.example.toml
debug/: multi_timestep_tracker.py  tracking_debugger.py
lib/: cloud.py  cloudfield.py  cloudtracker.py
src/: config_loader.py  data_management.py  netcdf_writer.py  reduced_netcdf_writer.py
tests/: conftest.py  test_buoyancy_criterion.py  test_cloud_merge_age.py  test_cloud_merge_status.py  test_cloud_splitting.py  test_cloudfield_kdtree.py  test_cloudtracker.py  test_config_loader.py  test_env_aloft.py  test_identify_regions.py  test_kd_cloud_match.py  test_mcf_parser.py  test_merge_split_resolution.py  test_monc_adapter.py  test_new_track.py  test_partial_lifetime.py  test_pre_filter.py  test_rain_physics.py  test_utils.py
utils/: constants.py  debug_units.py  physics.py  plotting_utils.py
(+10 files in other folders)
